# pimp

./: .env  .env.example  .gitignore  .spotify_cache  IMPLEMENTATION.md  In the Aeroplane Over The Sea.srt.txt  LetrasPIP.spec  LetrasPIP_temp.spec  README.md  README_OFFSET_FIX.txt  _deletar_depois.bak  build_spec.py  config.py  convert_icon.py  gitignore.bak  index.html  letraspip-fixes (1).py  letraspip-smart-solution (1).py  letraspip_analysis.md  letraspip_improvements.md  letraspip_offset_logging_fix.diff  lyrics_window.py  main.py  main_corrompido.py  main_smart_complete.py  main_srt.py  main_unified.py  nuitka_config.py  offset_controller.py  package-lock.json  package.json  playwright-simple.config.ts  playwright.config.ts  pnpm-lock.yaml  requirements.txt  setup.iss  setup.py  setup_cx.py  setup_test.py  spotify_thread.py  (+12 more)
.github/workflows/: release.yml  test.yml
build_scripts/: setup2.py  setup3.py  setup4.py
correcoes/: app_css_enhanced.css  cargo_toml_update.txt  debug_desktop_204.rs  desktop_workaround.rs  layered_window_approach.rs  transparent_css.css  transparent_window.rs  usetauri_final_fix.ts
coverage/: coverage-final.json  index.html
coverage/correcoes/: index.html  usetauri_final_fix.ts.html
e2e/: app.spec.ts
playwright-report/: index.html
src/: App.css  App.test.tsx  App.tsx  LyricsDisplay.test.tsx  store.test.ts
src-tauri/: Cargo.toml  spotify_enhanced.rs  tauri.conf.json
src-tauri/src/: cache.rs  config.rs  lib.rs  lyrics.rs  main.rs  offset_manager.rs  spotify.rs  sync_engine.rs  types.rs
src-tauri/src-tauri/: tauri.conf.json
test-results/: .last-run.json
(+32 files in other folders)
